# IMServer

./: .gitignore  gitConfig.sh  libInstall.sh
ChatServer/: CMakeLists.txt
ChatServer/include/: ChatGrpcClient.h  ConfigMgr.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  Singleton.h  const.h
ChatServer/res/: config.ini
ChatServer/src/: AsioIOServicePool.cpp  ChatGrpcClient.cpp  ConfigMgr.cpp
ChatServer2/: CMakeLists.txt  MysqlMgr.cpp  RedisMgr.cpp  config.ini  const.h  main.cpp
ChatServer2/include/: AsioIOServicePool.h  ChatGrpcClient.h  LogicSystem.h  MsgNode.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h
ChatServer2/proto/: message.proto
ChatServer2/res/: config.ini
ChatServer2/src/: CServer.cpp  CSession.cpp  LogicSystem.cpp  MysqlDao.cpp
GateServer/: AsioIOServicePool.h  CMakeLists.txt  CServer.h  ConfigMgr.h  MysqlDao.cpp  MysqlMgr.cpp  README.md  RedisMgr.h  StatusGrpcClient.h  VarifyGrpcClient.h  config.ini
GateServer/include/: HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  const.h
GateServer/res/: config.ini
GateServer/src/: AsioIOServicePool.cpp  CServer.cpp  ConfigMgr.cpp  HttpConnection.cpp  LogicSystem.cpp  RedisMgr.cpp  VarifyGrpcClient.cpp  main.cpp
StatusServer/: CMakeLists.txt  MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  StatusServiceImpl.cpp  config.ini  main.cpp
StatusServer/include/: AsioIOServicePool.h  RedisMgr.h
StatusServer/proto/: generate_protos.sh
StatusServer/res/: config.ini
StatusServer/src/: AsioIOServicePool.cpp  ConfigMgr.cpp
VarifyServer/: config.json  package-lock.json  package.json  server.js
